[package]
name = "commit-batch"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomt = { path = "../../nomt"  }
anyhow = "1.0.81"
sha2 = "0.10.6"
prost = "0.11"
prost-types = "0.11"
clap = { version = "4.2", features = ["derive"] }

[build-dependencies]
prost-build = "0.11"